// -----------------------------------------------------------------------------
// Copyright 2018 Frank V. Castellucci
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
// -----------------------------------------------------------------------------

syntax = "proto3";
option java_multiple_files = true;
option java_package = "hashblock.chains.protobuf";

// Resource quantity
message Quantity {
	bytes value = 1;
	bytes valueUnit = 2;
	bytes resourceUnit = 3;
}

// Quantity ratio
message Ratio {
    Quantity numerator = 1;
    Quantity denominator = 2;
}

// Economic event with plus/minus duality
message InitiateEvent {
    string version = 1;
    bytes plus = 2;
    bytes minus = 3;
    Quantity quantity = 4;
}

message ReciprocateEvent {
    string version = 1;
    bytes plus = 2;
    bytes minus = 3;
    Ratio ratio = 4;
    Quantity quantity = 5;
    bytes InitiateEvent = 6;
}